shoppingcart/k8s/manifests/orderwrapper.yml
apiVersion: v1
kind: Service
metadata:
  name: orderwrapper
spec:
  type: NodePort
  selector:
    component: orderwrapper
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderwrapper
spec:
  replicas: 2
  selector:
    matchLabels:
      component: orderwrapper
  template:
    metadata:
      labels:
        component: orderwrapper
    spec:
      containers:
        - name: orderwrapper
          image: docker.io/ngavalas/orderwrapper:latest
          imagePullPolicy: Always
          command: ["java"]
          args: ["-jar", "/srv/orderwrapper/target/orderwrapper-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
