shoppingcart/k8s/manifests/paymentwrapper.yml
apiVersion: v1
kind: Service
metadata:
  name: paymentwrapper
spec:
  type: NodePort
  selector:
    component: paymentwrapper
  ports:
    - port: 8080
      name: http
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentwrapper
spec:
  replicas: 2
  selector:
    matchLabels:
      component: paymentwrapper
  template:
    metadata:
      labels:
        component: paymentwrapper
    spec:
      containers:
        - name: paymentwrapper
          image: docker.io/ngavalas/paymentwrapper:latest
          imagePullPolicy: Always
          command: ["java"]
          args: ["-jar", "/srv/paymentwrapper/target/paymentwrapper-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
