shoppingcart/k8s/manifests/stock.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-0
spec:
  type: ClusterIP
  selector:
    component: stock-0
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-0
spec:
  replicas: 2
  selector:
    matchLabels:
      component: stock-0
  template:
    metadata:
      labels:
        component: stock-0
    spec:
      containers:
        - name: stock-0
          image: stock:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["java"]
          args: ["-jar", "/srv/stock/target/stock-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stock-1
spec:
  type: ClusterIP
  selector:
    component: stock-1
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-1
spec:
  replicas: 2
  selector:
    matchLabels:
      component: stock-1
  template:
    metadata:
      labels:
        component: stock-1
    spec:
      containers:
        - name: stock-1
          image: stock:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["java"]
          args: ["-jar", "/srv/stock/target/stock-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
