shoppingcart/k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    #kubernetes.io/ingress.global-static-ip-name: "wdm"
spec:
  rules:
    - http:
        paths:
          - path: /orders/
            pathType: Prefix
            backend:
              service:
                name: orderwrapper
                port:
                  number: 8080
          - path: /stock/
            pathType: Prefix
            backend:
              service:
                name: stockwrapper
                port:
                  number: 8080
          - path: /payment/
            pathType: Prefix
            backend:
              service:
                name: paymentwrapper
                port:
                  number: 8080
